mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_duplicate_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Duplicate field 'x' in class 'C'
--> test_scripts/error_cases/semantic_duplicate_field.mux:4:5
   |
 4 |     int x
   |     ^^^
   |
= help: Each field name must be unique within a class. Rename or remove the duplicate field.
